--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -8,12 +8,12 @@
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  color: #333;
+  color: #FEFAE0;
 }
 
 /* Header and Navbar Styles */
 .header {
-  background-color: #333;
+  background-color: #283618;
   color: #fff;
   padding: 1rem;
   text-align: center;
@@ -31,7 +31,7 @@ body {
 }
 
 .navbar ul li a {
-  color: #fff;
+  color: #283618;
   text-decoration: none;
   font-weight: bold;
 }
@@ -80,8 +80,8 @@ main {
 
 .download-link {
   text-decoration: none;
-  background-color: #333;
-  color: #fff;
+  background-color: #606C38;
+  color: #FEFAE0;
   padding: 0.5rem 1rem;
   border-radius: 5px;
   display: inline-block;
@@ -89,13 +89,13 @@ main {
 }
 
 .download-link:hover {
-  background-color: #555;
+  background-color: #DDA15E;
 }
 
 /* Footer Styling */
 .footer {
-  background-color: #333;
-  color: #fff;
+  background-color: #283618;
+  color: #FEFAE0;
   text-align: center;
   padding: 1rem;
   font-size: 0.9rem;
@@ -115,7 +115,7 @@ main {
   max-width: 600px;
   margin: 0 auto;
   padding: 1rem;
-  background-color: #f4f4f4;
+  background-color: #BC6C25;
   border-radius: 5px;
 }
 
@@ -138,8 +138,8 @@ main {
 }
 
 .contact-form input[type="submit"] {
-  background-color: #333;
-  color: #fff;
+  background-color: #DDA15E;
+  color: #FEFAE0;
   border: none;
   padding: 1rem 2rem;
   font-size: 1rem;
@@ -148,5 +148,5 @@ main {
 }
 
 .contact-form input[type="submit"]:hover {
-  background-color: #555;
+  background-color: #FEFAE0;
 }
