--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -139,7 +139,7 @@ main {
 
 .contact-form input[type="submit"] {
   background-color: #DDA15E;
-  color: #FEFAE0;
+  color: #606C38;
   border: none;
   padding: 1rem 2rem;
   font-size: 1rem;
@@ -148,5 +148,5 @@ main {
 }
 
 .contact-form input[type="submit"]:hover {
-  background-color: #FEFAE0;
+  background-color: #606C38;
 }
