--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -94,7 +94,7 @@ main {
 }
 
 .footer {
-  background-color: #637081;
+  background-color: #536B78;
   color: #C7E0EF;
   text-align: center;
   padding: 1rem;
