--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -66,7 +66,7 @@ main {
   font-size: 1.1rem;
   line-height: 1.8;
   margin-bottom: 1.2rem;
-  color: #637081;
+  color: #7C98B3;
 }
 
 .resume-content {
