--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -59,14 +59,14 @@ main {
   text-align: center;
   font-size: 2rem;
   margin-bottom: 20px;
-  color: #ACCBE1;
+  color: #7C98B3;
 }
 
 .about-content p {
   font-size: 1.1rem;
   line-height: 1.8;
   margin-bottom: 1.2rem;
-  color: #7C98B3;
+  color: #536B78;
 }
 
 .resume-content {
