--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -56,9 +56,16 @@ main {
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
-
+.
 .home-container {
   padding: 20px;
+}
+
+.icon-photo{
+display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .name {
@@ -81,6 +88,7 @@ main {
   margin-bottom: 1.2rem;
   color: #7c98b3;  
 }
+
 
 /* Buttons & Links */
 .download-link {
