--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -59,7 +59,7 @@ main {
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
-  background-color: #b2d8fc; / 
+  background-color: #b2d8fc;  
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   flex-grow: 1;
