--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -90,7 +90,7 @@ display: block;
   font-size: 1.1rem;
   line-height: 1.8;
   margin-bottom: 1.2rem;
-  color: #7c98b3;  
+  color: #536b78;  
 }
 
 /* Profile Image */
