--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -25,8 +25,8 @@ body {
   padding: 0 20px; 
 }
 
-/* Header & Navbar */
-.header, .navbar, .footer {
+/* Footer & Navbar */
+.navbar, .footer {
   background-color: #536b78;  
   padding: 1rem;
   text-align: center;
