--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -160,7 +160,7 @@ display: block;
   color: #e0eefc;
 }
 
-footer {
+.footer {
   width: 100%;
   margin-top: auto;  
   background-color: #536b78;
