--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -94,8 +94,9 @@ main {
 /* Profile Image */
 .profile-photo {
   display: block;
-  margin: 20px auto;
-  width: 200px;  
+  margin-left: auto;
+  margin-right: auto;  
+  width: 150px;  
   border-radius: 100%;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
