--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -19,7 +19,10 @@ body {
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  flex-grow: 1;
   max-width: 1200px;   
   margin: 0 auto;  
  }
@@ -167,4 +170,5 @@ main {
   padding: 1rem;
   text-align: center;
   color: #b2d8fc;
+  margin-top: auto;
 }
