--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -95,13 +95,12 @@ main {
 }
 
 /* Profile Image */
-.profile-photo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;  
-  width: 50%;  
-  max-width: 90px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+ .profile-photo {
+   display: block;
+   margin: 20px auto;
+   width: 200px;  
+   border-radius: 100%;
+   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Buttons & Links */
