--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -82,11 +82,42 @@ main {
 .about-content h1, 
 .resume-content h1 {
   text-align: center;
-  font-size: 2rem;
   margin-bottom: 20px;
-  color: #536b78;  
+  font-size: 2.5rem;
+  color: #536b78;
 }
 
+  .resume-content {
+  padding: 20px;
+  background-color: #f0f5fc;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+  .resume-pdf {
+  width: 100%;
+  height: 600px;
+  border: none;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+  .download-link {
+  text-decoration: none;
+  background-color: #7c98b3;
+  color: #e0eefc;
+  padding: 10px 20px;
+  border-radius: 5px;
+  display: inline-block;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.download-link:hover {
+  background-color: #536b78;
+  color: #ffffff;
+}
 .about-content p {
   font-size: 1.1rem;
   line-height: 1.8;
@@ -184,6 +215,19 @@ main {
 
   .contact-form input[type="submit"] {
     padding: 12px 20px;
+  }
+   .resume-pdf {
+    height: 500px;   
+  }
+
+  .container {
+    padding: 10px;
+  }
+
+  .download-link {
+    width: 100%;
+    text-align: center;
+    padding: 15px 0;
   }
 }
   
