--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -92,15 +92,17 @@ main {
   background-color: #f0f5fc;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
 }
 
   .resume-pdf {
   width: 100%;
-  height: 600px;
+  height: 800px;
   border: none;
   margin-bottom: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  overflow: auto;
 }
 
   .download-link {
