--- a/which-witch/style.css
+++ b/which-witch/style.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Creepster&display=swap'); /* Add spooky font */
 @import url('https://fonts.googleapis.com/css2?family=Mystery+Quest&display=swap'); /* Add Mystery Quest font */
 
+
+html {
+    overflow-y: scroll;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   background-color: #1e1e2f; /* Dark mystical background */
