--- a/which-witch/style.css
+++ b/which-witch/style.css
@@ -132,7 +132,7 @@ input[type="radio"]:checked + label {
 
 
 @media (max-width: 600px) {
-  .resultImage, .descriptionImage {
+  .resultImage, .descriptionImage, .quizDescriptionImage {
     width: 90%; /* Adjusts the width for smaller screens */
     height: auto; /* Maintains the aspect ratio */
     object-fit: contain; /* Ensures the image fits within the container without changing its aspect ratio */
