--- a/which-witch/style.css
+++ b/which-witch/style.css
@@ -119,6 +119,12 @@ input[type="radio"]:checked + label {
   object-fit: contain; /* Ensures the image fits within the container without changing its aspect ratio */
 }
 
+.quizDescriptionImage {
+    width: 80%; /* Customize the width */
+    max-width: 500px; /* Set maximum size */
+    height: auto; /* Maintain aspect ratio */
+}
+
 
 
 @media (max-width: 600px) {
